update Hammer.JS path to point to the local path

--- a/src/html/incs/ending.jade
+++ b/src/html/incs/ending.jade
@@ -1,4 +1,4 @@
 script(src="dependencies/zepto/zepto.min.js")
-script(src="http://hammerjs.github.io/dist/hammer.min.js")
+script(src="dependencies/hammer/hammer.min.js")
 script(src="js/pager.js")
 script(src="js/app.js")
